# sumdnc-website

./: .editorconfig  .gitignore  Agents.md  DATABASE-SETUP-GUIDE.md  DEVELOPMENT-STATUS.md  DEVELOPMENT-SUMMARY.md  LICENSE  NAVIGATION-STRUCTURE.md  README-PROJECT-DOCS.md  README-PROJECT-STRUCTURE.md  README.md  SETUP-COMPLETE.md  SITE-STRUCTURE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-project.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  deploy-preview.yml  deploy-production.yml  lighthouse.yml
conf/: .env.example  database.yml  redis.yml
docs/: CERTS.md  DEVTOOLS.md  WEBDEV.md
docs/sumdnc/: about.md
guidelines/collaboration/: COLLABORATION-PM.md
guidelines/core/: ARCHITECTURE.md  COMMON-PATTERNS.md  PROJECT-SETUP.md
guidelines/deployment/: CI-CD-PIPELINE.md  DEPLOYMENT-GUIDE.md  MONITORING-LOGGING.md  VERSION-CONTROL.md
guidelines/design/: RESPONSIVE-DESIGN.md
guidelines/development/: API-STANDARDS.md  DATA-PIPELINE.md  DATABASE-PATTERNS.md  ERROR-HANDLING.md  FRONTEND-STANDARDS.md  PYTHON-STYLE.md
guidelines/quality/: ACCESSIBILITY.md  PERFORMANCE.md  SECURITY-CHECKLIST.md  TESTING-GUIDE.md  TROUBLESHOOTING.md
individuals/: README.md
projects/: README.md
projects/analytics/: .gitignore  README.md  pyproject.toml
projects/analytics/src/: main.py
projects/analytics/tests/: test_example.py
projects/utils/: README.md
projects/web/: .eslintrc.json  README.md  next.config.js  package.json  (+2 more)
(+32 files in other folders)
